Fixed word wrap in lecture explorer Addresses #37. Layout wraps before title field gets too small. Added ellipsis when lecture is closed.

--- a/styles/sass/layout/_lecture_explorer.scss
+++ b/styles/sass/layout/_lecture_explorer.scss
@@ -22,6 +22,7 @@
     vertical-align: top;
     min-height: $lecture-explorer-min-height;
 	flex: 1 0 $lecture-explorer-basis;
+	min-width: 0;
 }
 
 #search-and-add,
